# 20220323.webcrawler_template

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
tests/: test_webcrawler_template.py
webcrawler_template/: items.py  middlewares.py  pipelines.py  settings.py
